# rust-upload-sdk

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci-test.yml
examples/upload_file/: main.rs
src/: base64.rs  config.rs  credential.rs  error.rs  host_selector.rs  lib.rs  query.rs  reader.rs  upload_apis.rs  upload_policy.rs  upload_token.rs  uploader.rs  utils.rs
