[package]
name = "qiniu-upload"
version = "0.0.1"
description = "Qiniu Resource (Cloud) Upload SDK for Rust."
authors = ["Bachue Zhou <zhourong@qiniu.com>", "longbai <baishunlong@qiniu.com>", "qiniusdk <sdk@qiniu.com>"]
documentation = "https://docs.rs/qiniu-upload"
repository = "https://github.com/qiniu/rust-upload-sdk"
readme = "README.md"
edition = "2018"
keywords = ["qiniu", "storage", "sdk", "cloud"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
reqwest = { version = "0.11.3", features = ["blocking", "json"] }
once_cell = "1.7.2"
toml = "0.5.8"
log = "0.4.14"
notify = "4.0.16"
tap = "1.0.1"
rand = "0.8.3"
dashmap = { version = "4.0.2", features = ["serde"] }
directories = "3.0.2"
url = "2.2.2"
futures = "0.3.15"
thiserror = "1.0.24"
base64 = "0.13.0"
hmac = "0.11.0"
sha-1 = "0.9.6"

[dev-dependencies]
env_logger = "0.8.3"
tempfile = "3.2.0"
tokio = { version = "1.5.0", features = ["rt", "macros", "time"] }
warp = "0.3.1"
